--- a/index.html
+++ b/index.html
@@ -102,30 +102,30 @@
       <h2 class=>Bernardo França</h2>
       <img src="./img/bernardo.jpg" alt="ALUNO1">
       <ul>
-        <li><a href="">instagram</a></li>
-        <li><a href="">linked-in</a></li>
-        <li><a href="">github</a></li>
-        <li><a href="">scratch</a></li>
+        <li><a href="" target="_blank">instagram</a></li>
+        <li><a href="" target="_blank">linked-in</a></li>
+        <li><a href="" target="_blank">github</a></li>
+        <li><a href="" target="_blank">scratch</a></li>
       </ul>
     </div>
     <div class="aluno aluno2">
       <h2 style="color: tomato;">Breno Lopes</h2>
       <img src="./img/breno.jpg" alt="ALUNO2">
       <ul>
-        <li><a href="">instagram</a></li>
-        <li><a href="">linked-in</a></li>
-        <li><a href="">github</a></li>
-        <li><a href="">scratch</a></li>
+        <li><a href="https://www.instagram.com/o_breno_lopes/" target="_blank">instagram</a></li>
+        <li><a href="https://www.linkedin.com/in/breno-lopes-do-carmo/" target="_blank">linked-in</a></li>
+        <li><a href="https://github.com/zTrolly" target="_blank">github</a></li>
+        <li><a href="https://scratch.mit.edu/users/zTrolly/" target="_blank">scratch</a></li>
       </ul>
     </div>
     <div class="aluno aluno3"> 
       <h2>Gabriel Svizzero</h2>
       <img src="./img/gabriel.jpg" alt="ALUNO3">
       <ul>
-        <li><a href="">instagram</a></li>
-        <li><a href="">linked-in</a></li>
-        <li><a href="">github</a></li>
-        <li><a href="">scratch</a></li>
+        <li><a href="" target="_blank">instagram</a></li>
+        <li><a href="" target="_blank">linked-in</a></li>
+        <li><a href="" target="_blank">github</a></li>
+        <li><a href="" target="_blank">scratch</a></li>
       </ul>
     </div>
   </section>
