update com o jogo anexado ao site

--- a/index.html
+++ b/index.html
@@ -100,9 +100,8 @@
 
   <section class="grid-section jogo js-scroll" id="jogo">
     <h1 class="titulo">Jogo</h1>
-    <p style="grid-column: 2;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores voluptate ab necessitatibus ipsam molestiae eos autem dicta accusantium nisi molestias nesciunt architecto quaerat in harum odio, asperiores nam totam, voluptatem rem? Culpa, maiores nulla? Earum aspernatur architecto est, ipsum suscipit dolorem inventore. Consectetur est officiis deserunt ullam minima sapiente esse. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum beatae doloribus pariatur cupiditate, blanditiis necessitatibus magnam placeat minima tempora expedita autem dicta eaque nostrum obcaecati repellendus laborum sequi quaerat eligendi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat ex odio eaque sequi fugit, nisi quae optio libero alias rem magnam, ab cum harum suscipit. Laboriosam sit quasi laudantium optio.</p>
-    <iframe src="https://scratch.mit.edu/projects/501993556/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
-  </section>
+    <p style="grid-column: 2; font-family: monospace; line-height: 2rem; font-size: 1.25rem;" >O nosso jogo é um estilo de pong entre dois players o time do Nobel e o time do Turing Award. O lado ganhador poderá ver fatos de alguns ganhadores dos prêmios, para ganhar é necessário fazer 10 pontos. O player2(Nobel) usa as setas do teclado pra movimetar, o player1(Turing) utiliza o "W" e o "S".</p>
+    <iframe src="https://scratch.mit.edu/projects/536866629/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>  </section>
 
   <section class="grid-section alunos js-scroll" id="alunos">
     <h1 class="titulo">ALUNOS</h1>
