--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
 
   <section class="grid-section jogo js-scroll" id="jogo">
     <h1 class="titulo">Jogo</h1>
-    <p style="grid-column: 2; font-family: monospace; line-height: 2rem; font-size: 1.25rem;" >O nosso jogo é um estilo de pong entre dois players o time do Nobel e o time do Turing Award. O lado ganhador poderá ver fatos de alguns ganhadores dos prêmios, para ganhar é necessário fazer 10 pontos. O player2(Nobel) usa as setas do teclado pra movimetar, o player1(Turing) utiliza o "W" e o "S".</p>
+    <p style="grid-column: 2; font-family: monospace; line-height: 2rem; font-size: 1.25rem;" >O nosso jogo é um estilo de pong entre dois players o time do Nobel e o time do Turing Award. O lado ganhador poderá ver fatos de alguns ganhadores dos prêmios, para ganhar é necessário fazer 10 pontos. O player2(Nobel) usa as setas do teclado pra movimetar, o player1(Turing) utiliza o "W" e o "S".
+    <a href="https://scratch.mit.edu/projects/536866629" target="_blank" rel="noopener noreferrer">Confira o nosso jogo aqui.</a></p>
     <iframe src="https://scratch.mit.edu/projects/536866629/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>  </section>
 
   <section class="grid-section alunos js-scroll" id="alunos">
