--- a/index.html
+++ b/index.html
@@ -98,6 +98,11 @@
     </dl>
   </section>
 
+  <section class="grid-section trailer js-scroll" id="trailer">
+    <h1 class="titulo">Trailer</h1>
+   <iframe width="798" height="449" src="https://www.youtube.com/embed/P0p599LNa3o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </section>
+
   <section class="grid-section jogo js-scroll" id="jogo">
     <h1 class="titulo">Jogo</h1>
     <p style="grid-column: 2; font-family: monospace; line-height: 2rem; font-size: 1.25rem;" >O nosso jogo é um estilo de pong entre dois players o time do Nobel e o time do Turing Award. O lado ganhador poderá ver fatos de alguns ganhadores dos prêmios, para ganhar é necessário fazer 10 pontos. O player2(Nobel) usa as setas do teclado pra movimetar, o player1(Turing) utiliza o "W" e o "S".
@@ -110,10 +115,8 @@
       <h2 class=>Bernardo_França</h2>
       <img src="./img/bernardo.jpg" alt="ALUNO1">
       <ul>
-        <li><a href="" target="_blank">instagram</a></li>
-        <li><a href="" target="_blank">linked-in</a></li>
-        <li><a href="" target="_blank">github</a></li>
-        <li><a href="" target="_blank">scratch</a></li>
+        <li><a href="https://www.instagram.com/protagonista01/" target="_blank">instagram</a></li>
+        <li><a href="https://scratch.mit.edu/users/etzudo02/" target="_blank">scratch</a></li>
       </ul>
     </div>
     <div class="aluno aluno2">
@@ -130,10 +133,9 @@
       <h2>Gabriel_Svizzero</h2>
       <img src="./img/gabriel.jpg" alt="ALUNO3">
       <ul>
-        <li><a href="" target="_blank">instagram</a></li>
-        <li><a href="" target="_blank">linked-in</a></li>
-        <li><a href="" target="_blank">github</a></li>
-        <li><a href="" target="_blank">scratch</a></li>
+        <li><a href="https://www.instagram.com/svizzerogm/" target="_blank">instagram</a></li>
+        <li><a href="https://github.com/Gabrielsvi" target="_blank">github</a></li>
+        <li><a href="https://scratch.mit.edu/users/Gabrielsvi/" target="_blank">scratch</a></li>
       </ul>
     </div>
   </section>
