--- a/index.html
+++ b/index.html
@@ -103,6 +103,11 @@
    <iframe width="798" height="449" src="https://www.youtube.com/embed/P0p599LNa3o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
 
+    <section class="grid-section analise js-scroll" id="analise">
+      <h1 class="titulo">Analise</h1>
+      <iframe width="798" height="449" src="https://www.youtube.com/embed/_LIFX9T0eoc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </section>
+
   <section class="grid-section jogo js-scroll" id="jogo">
     <h1 class="titulo">Jogo</h1>
     <p style="grid-column: 2; font-family: monospace; line-height: 2rem; font-size: 1.25rem;" >O nosso jogo é um estilo de pong entre dois players o time do Nobel e o time do Turing Award. O lado ganhador poderá ver fatos de alguns ganhadores dos prêmios, para ganhar é necessário fazer 10 pontos. O player2(Nobel) usa as setas do teclado pra movimetar, o player1(Turing) utiliza o "W" e o "S".
