--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
       <ul>
         <li><a href="https://www.instagram.com/protagonista01/" target="_blank">instagram</a></li>
         <li><a href="https://scratch.mit.edu/users/etzudo02/" target="_blank">scratch</a></li>
+        <li><a href="http://lattes.cnpq.br/6936336718632881" target="_blank">Lattes</a></li>
       </ul>
     </div>
     <div class="aluno aluno2">
@@ -132,6 +133,7 @@
         <li><a href="https://www.linkedin.com/in/breno-lopes-do-carmo/" target="_blank">linked-in</a></li>
         <li><a href="https://github.com/zTrolly" target="_blank">github</a></li>
         <li><a href="https://scratch.mit.edu/users/zTrolly/" target="_blank">scratch</a></li>
+        <li><a href="http://lattes.cnpq.br/1079666357182799" target="_blank">Lattes</a></li>
       </ul>
     </div>
     <div class="aluno aluno3"> 
@@ -141,6 +143,7 @@
         <li><a href="https://www.instagram.com/svizzerogm/" target="_blank">instagram</a></li>
         <li><a href="https://github.com/Gabrielsvi" target="_blank">github</a></li>
         <li><a href="https://scratch.mit.edu/users/Gabrielsvi/" target="_blank">scratch</a></li>
+        <li><a href="http://lattes.cnpq.br/0978458680213296" target="_blank">Lattes</a></li>
       </ul>
     </div>
   </section>
